Desenvolvimento do botão

--- a/carrinho.html
+++ b/carrinho.html
@@ -7,13 +7,20 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     <!-- Estilo MVP -->
+    <!-- Estilo MVP -->
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="./css/carrinho.css">
 
     <title>MVP SKINS | CARRINHO</title>
   </head>
   <body>
+    <!-- Início da header -->
+
+
+    <!-- Início do body  -->
+
+
+    <!-- Início do footer  -->
 
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
