--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -10,11 +10,23 @@
      <!-- Estilo MVP -->
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="./css/carrinho.css">
+    <link rel="stylesheet" href="container-produto-grid.css">
+    <link rel="stylesheet" href="../botoes/botoes.css">
 
-    <title>MVP SKINS | CARRINHO</title>
+    <title>MVP SKINS | CONTAINER DE PRODUTO</title>
   </head>
   <body>
-
+    
+    <!-- Card de produtos -->
+    <div class="card card-produto-mvp" style="width: 18rem;">
+      <img class="card-img-top img-produto-mvp" src="/images/produto-carrousel-1.png" alt="Imagem de capa do card">
+      <div class="card-body">
+        <h5 class="card-title">AK-47 | LINHAS VERMELHAS</h5>
+        <p class="card-text">de R$ PREÇO</p>
+        <p class="card-text">de R$ PREÇO</p>
+        <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp">Comprar</button>
+      </div>
+    </div>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
