--- a/componentes/botoes/botoes.html
+++ b/componentes/botoes/botoes.html
@@ -10,11 +10,16 @@
      <!-- Estilo MVP -->
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="./css/carrinho.css">
+    <link rel="stylesheet" href="botoes.css">
 
-    <title>MVP SKINS | CARRINHO</title>
+    <title>MVP SKINS | BOTÕES</title>
   </head>
   <body>
+    <!-- Button de primeira importância -->
+    <button type="button" class="btn btn-primary btn-mvp  btn-primario-mvp">Comprar</button>
 
+    <!-- Button de segunda importância  -->
+    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Voltar para a home</button>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
