Correções nos botões, importação das fontes e avanço no card de produtos

--- a/componentes/botoes/botoes.html
+++ b/componentes/botoes/botoes.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <!-- Button de primeira importância -->
-    <button type="button" class="btn btn-primary btn-mvp  btn-primario-mvp">Comprar</button>
+    <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-2">Comprar</button>
 
     <!-- Button de segunda importância  -->
-    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Voltar para a home</button>
+    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-2">Voltar para a home</button>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
