--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
      <!-- Estilo MVP -->
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="./css/carrinho.css">
+    <link rel="stylesheet" href="../../css/estilo.css">
+    <link rel="stylesheet" href="../../css/carrinho.css">
     <link rel="stylesheet" href="container-produto-grid.css">
     <link rel="stylesheet" href="../botoes/botoes.css">
 
@@ -18,11 +18,13 @@
   <body>
     
     <!-- Card de produtos -->
-    <div class="card card-produto-mvp" style="width: 18rem;">
-      <img class="card-img-top img-produto-mvp" src="/images/produto-carrousel-1.png" alt="Imagem de capa do card">
+    <div class="card card-produto-mvp col-4 p-0 m-0">
+      <div class="card-body border-bottom-3 card-produto-mvp">
+        <img class="card-img-top img-produto-mvp" src="/images/produto-carrousel-1.png" alt="Imagem de capa do card">
+      </div>
       <div class="card-body">
-        <h5 class="card-title">AK-47 | LINHAS VERMELHAS</h5>
-        <p class="card-text">de R$ PREÇO</p>
+        <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+        <p class="card-text promocao-de-preco">de R$ PREÇO</p>
         <p class="card-text">de R$ PREÇO</p>
         <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp">Comprar</button>
       </div>
