Correções finais nos botões. Finalização dos cards de produtos. Ajustes na página de estilo central

--- a/carrinho.html
+++ b/carrinho.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/carrinho.css">
 
     <title>MVP SKINS | CARRINHO</title>
+    <link rel="shortcut icon" type="imagex/png" href="/images/ID/image (2) (1).png">
+
   </head>
   <body>
     <!-- Início da header -->
