--- a/componentes/botoes/botoes.html
+++ b/componentes/botoes/botoes.html
@@ -8,18 +8,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
      <!-- Estilo MVP -->
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="./css/carrinho.css">
-    <link rel="stylesheet" href="botoes.css">
+     <link rel="stylesheet" href="/css/estilo.css">
+     <link rel="stylesheet" href="botoes.css">
 
     <title>MVP SKINS | BOTÕES</title>
   </head>
   <body>
     <!-- Button de primeira importância -->
-    <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-2">Comprar</button>
+    <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-5 col-sm-5 col-md-4 col-lg-4 col-xl-3">Comprar</button>
 
     <!-- Button de segunda importância  -->
-    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-2">Voltar para a home</button>
+    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-5 col-sm-5 col-md-4 col-lg-4 col-xl-3">Voltar para a home</button>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
