--- a/componentes/formularios/formularios.html
+++ b/componentes/formularios/formularios.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-        <link href="/componentes/styles.css" rel = "stylesheet">
+        <link href="/componentes/formularios/styles.css" rel = "stylesheet">
         <title></title>
     </head>
 
