--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- Card de produtos -->
-    <div class="card card-produto-mvp xl p-0 m-0 col-4 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+    <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
       <div class="card-body border-bottom-3 card-produto">
         <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
       </div>
