Correções de responsividade, correção de cor de fundo dos botões, carregamento de segurança da página carrinho de compras

--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -19,12 +19,15 @@
   <body>
     <!-- Card de produtos -->
     <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+      <!-- Imagem do produto  -->
       <div class="card-body border-bottom-3 card-produto">
         <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
       </div>
 
+      <!-- Linha  -->
       <hr class="card-linha p-0 m-0">
       
+      <!-- Infos do produto  -->
       <div class="card-body card-produto px-3 py-3">
         <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
         <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
