--- a/componentes/botoes/botoes.html
+++ b/componentes/botoes/botoes.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <!-- Button de primeira importância -->
-    <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-5 col-sm-5 col-md-4 col-lg-4 col-xl-3">Comprar</button>
+    <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp">Comprar</button>
 
     <!-- Button de segunda importância  -->
-    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp col-5 col-sm-5 col-md-4 col-lg-4 col-xl-3">Voltar para a home</button>
+    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Voltar para a home</button>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
