finalização do modal de login

--- a/componentes/footer/footer.html
+++ b/componentes/footer/footer.html
@@ -1,76 +1,91 @@
 <!-- inicio footer -->
-<footer class="container d-flex justify-content-center mw-100 px-0">
-    <div class="row col-12 justify-content-around py-3">
-        <div class="row d-none d-lg-flex col-lg-8 justify-content-around">
-            <!-- primeira coluna -->
-            <div class="col-4">
-                <div class="texto-footer">INSTITUCIONAL</div>
-                <div class="texto-footer">PARCEIROS</div>
-                <div class="texto-footer">TERMOS DE SERVIÇO</div>
-                <div class="texto-footer">POLÍTICA DE PRIVACIDADE</div>
-                <div class="texto-footer">POLÍTICA DE COOKIES</div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href = "/componentes/footer/footer.css" rel = "stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <!--inicio footer-->
+    <footer class="container d-flex justify-content-center mw-100 px-0">
+        <div class="row col-12 justify-content-around py-3">
+            <div class="row d-none d-lg-flex col-lg-8 justify-content-around">
+                <!-- primeira coluna -->
+                <div class="col-4">
+                    <div class="texto-footer">INSTITUCIONAL</div>
+                    <div class="texto-footer">PARCEIROS</div>
+                    <div class="texto-footer">TERMOS DE SERVIÇO</div>
+                    <div class="texto-footer">POLÍTICA DE PRIVACIDADE</div>
+                    <div class="texto-footer">POLÍTICA DE COOKIES</div>
+                </div>
+                <!-- segunda coluna -->
+                <div class="col-4">
+                    <div class="texto-footer">COMO COMPRAR</div>
+                    <div class="texto-footer">COMO ME CADASTRAR</div>
+                    <div class="texto-footer">PAGAMENTOS</div>
+                    <div class="texto-footer">DEVOLUÇÕES</div>
+                    <div class="texto-footer">F.A.Q</div>
+                </div>
+                <!-- terceira coluna -->
+                <div class="col-4">
+                    <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div>
+                    <div class="texto-footer"><a class="link-footer" href="">CADASTRE-SE</a></div>
+                    <div class="texto-footer"><a class="link-footer" href="">RECUPERAR SENHA</a></div>
+                    <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div>
+                </div>
+                <!-- dados da empresa -->
+                <div class="row col-12 justify-content-center pt-3">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
             </div>
-            <!-- segunda coluna -->
-            <div class="col-4">
-                <div class="texto-footer">COMO COMPRAR</div>
-                <div class="texto-footer">COMO ME CADASTRAR</div>
-                <div class="texto-footer">PAGAMENTOS</div>
-                <div class="texto-footer">DEVOLUÇÕES</div>
-                <div class="texto-footer">F.A.Q</div>
+            <!-- quarta coluna  -->
+            <div class="col-12 col-lg-4">
+                <!-- redes sociais -->
+                <div class="row col-12 justify-content-center pb-1 mx-0">SIGA A GENTE</div>
+                <div class="row col-12 justify-content-center justify-content-lg-around py-1">
+                    <div class="col-2 col-lg-3 texto-footer">
+                        <a class="link-footer" href="https://www.facebook.com/" target="_blank">
+                            <img src="/componentes/icones/icon-facebook.png" alt="ícone do facebook" class="icon-footer">
+                        </a>
+                    </div>
+                    <div class="col-2 col-lg-3 texto-footer">
+                        <a class="link-footer" href="https://twitter.com/" target="_blank">
+                            <img src="/componentes/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
+                        </a>
+                    </div>
+                    <div class="col-2 col-lg-3 texto-footer">
+                        <a class="link-footer" href="https://discord.com/" target="_blank">
+                        <img src="/componentes/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
+                        </a>
+                    </div>
+                    <div class="col-2 col-lg-3 texto-footer">
+                        <a class="link-footer" href="https://www.instagram.com/" target="_blank">
+                            <img src="/componentes/icones/icon-instagram.png" alt="ícone do instagram" class="icon-footer">
+                        </a>
+                    </div>
+                </div>
+                <hr class="d-none d-lg-flex col-lg-12 justify-content-center">
+                <!-- metodos de pagamento -->
+                <div class="row d-none d-lg-flex col-12 justify-content-center pb-1 mx-0">MÉTODOS DE PAGAMENTO</div>
+                <div class="row d-none d-lg-flex col-lg-12 justify-content-around py-1">
+                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-mastercard.png" alt="ícone do mastercard" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-visa.png" alt="ícone da visa" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-codigo-de-barras.png" alt="ícone do boleto" class="icon-footer"></div>
+                    <div class="col-lg-3 texto-footer"><img src="/componentes/icones/icon-pix.png" alt="ícone do pix" class="icon-footer"></div>
+                </div>
+                <div class="row d-lg-none col-12 justify-content-center py-3 mx-0">
+                    <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div><br>
+                    <div class="texto-footer"><a class="link-footer" href="">CADASTRE-SE</a></div><br>
+                    <div class="texto-footer"><a class="link-footer" href="">RECUPERAR SENHA</a></div><br>
+                    <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div><br>
+                </div>
+                <div class="row d-lg-none col-12 justify-content-center py-3 mx-0 text-center">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
             </div>
-            <!-- terceira coluna -->
-            <div class="col-4">
-                <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div>
-                <div class="texto-footer"><a class="link-footer" href="">CADASTRE-SE</a></div>
-                <div class="texto-footer"><a class="link-footer" href="">RECUPERAR SENHA</a></div>
-                <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div>
-            </div>
-            <!-- dados da empresa -->
-            <div class="row col-12 justify-content-center pt-3">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
         </div>
-        <!-- quarta coluna  -->
-        <div class="col-12 col-lg-4">
-            <!-- redes sociais -->
-            <div class="row col-12 justify-content-center pb-1 mx-0">SIGA A GENTE</div>
-            <div class="row col-12 justify-content-center justify-content-lg-around py-1">
-                <div class="col-2 col-lg-3 texto-footer">
-                    <a class="link-footer" href="https://www.facebook.com/" target="_blank">
-                        <img src="./componentes/icones/icon-facebook.png" alt="ícone do facebook" class="icon-footer">
-                    </a>
-                </div>
-                <div class="col-2 col-lg-3 texto-footer">
-                    <a class="link-footer" href="https://twitter.com/" target="_blank">
-                        <img src="./componentes/icones/icon-twitter.png" alt="ícone do twitter" class="icon-footer">
-                    </a>
-                </div>
-                <div class="col-2 col-lg-3 texto-footer">
-                    <a class="link-footer" href="https://discord.com/" target="_blank">
-                    <img src="./componentes/icones/icon-discord.png" alt="ícone do discord" class="icon-footer">
-                    </a>
-                </div>
-                <div class="col-2 col-lg-3 texto-footer">
-                    <a class="link-footer" href="https://www.instagram.com/" target="_blank">
-                        <img src="./componentes/icones/icon-instagram.png" alt="ícone do instagram" class="icon-footer">
-                    </a>
-                </div>
-            </div>
-            <hr class="d-none d-lg-flex col-lg-12 justify-content-center">
-            <!-- metodos de pagamento -->
-            <div class="row d-none d-lg-flex col-12 justify-content-center pb-1 mx-0">MÉTODOS DE PAGAMENTO</div>
-            <div class="row d-none d-lg-flex col-lg-12 justify-content-around py-1">
-                <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-mastercard.png" alt="ícone do mastercard" class="icon-footer"></div>
-                <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-visa.png" alt="ícone da visa" class="icon-footer"></div>
-                <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-codigo-de-barras.png" alt="ícone do boleto" class="icon-footer"></div>
-                <div class="col-lg-3 texto-footer"><img src="./componentes/icones/icon-pix.png" alt="ícone do pix" class="icon-footer"></div>
-            </div>
-            <div class="row d-lg-none col-12 justify-content-center py-3 mx-0">
-                <div class="texto-footer"><a class="link-footer" href="">LOGIN</a></div><br>
-                <div class="texto-footer"><a class="link-footer" href="">CADASTRE-SE</a></div><br>
-                <div class="texto-footer"><a class="link-footer" href="">RECUPERAR SENHA</a></div><br>
-                <div class="texto-footer"><a class="link-footer" href="">FALE CONOSCO</a></div><br>
-            </div>
-            <div class="row d-lg-none col-12 justify-content-center py-3 mx-0 text-center">© MVP SKINS 2021 | CNPJ: 61.585.865/0001-51 |  TODOS OS DIREITOS RESERVADOS</div>
-        </div>
-    </div>
-</footer>
-<!-- fim footer -->
+    </footer>
+    <!-- fim footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+</body>
+</html>
