--- a/pagamento.html
+++ b/pagamento.html
@@ -4,50 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="./css/estilo.css" rel="stylesheet">
     <link href="./css/footer.css" rel="stylesheet">
+    <link href="./componentes/botoes/botoes.css" rel="stylesheet">
     <link href="./css/pagamento.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <!-- inicio pagamento -->
     <h1 class="h1-pagamento mt-4 mb-0">PAGAMENTO</h1>
-    <section class="container d-flex mw-100 my-5 p-0">
+    <section class="container d-flex mw-100 my-3 p-0">
         <div class="row m-0">
         <!-- inicio resumo do pedido  -->
             <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center m-0 my-4 p-0">
                 <div class="col-11 container-pagamento">
                     <div class="col-12 div-pagamento">
                         <div class="row col-11 m-3 p-2 produto-pagamento">
-                            <div class="col-5"><img class="imagem-resumo" src="./componentes/icones/icon-pix.png" alt=""></div>
+                            <div class="col-5"><img class="imagem-resumo" src="./images/produto-carrousel-1.png" alt=""></div>
                             <div class="col-7">
                                 <div>LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
                                 <div class="quantidade-pagamento">QUANTIDADE: 1</div>
-                                <div><b>PREÇO</b></div>
+                                <div><b>R$ 691,00</b></div>
                             </div>
                         </div>
                         <div class="row col-11 m-3 p-2 produto-pagamento">
-                            <div class="col-5 imagem-resumo"><img class="imagem-resumo" src="./componentes/icones/icon-pix.png" alt=""></div>
+                            <div class="col-5"><img class="imagem-resumo" src="./images/produto-carrousel-1.png" alt=""></div>
                             <div class="col-7">
                                 <div>LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
                                 <div class="quantidade-pagamento">QUANTIDADE: 1</div>
-                                <div><b>PREÇO</b></div>
+                                <div><b>R$ 691,00</b></div>
                             </div>
                         </div>
                     </div>
-                    <div class="row col-11 m-3 p-2 justify-content-around">
+                    <div class="row col-12 my-3 mx-0 p-2 justify-content-between">
                         <div class="col-6 texto-pagamento">
-                            <p>PAGAMENTO</p>
-                            <p><b>R$1.382,00</b></p>
+                            <p class="valores-pagamento">PAGAMENTO</p>
+                            <p class="valores-pagamento"><b>R$1.382,00</b></p>
                         </div>
                         <div class="col-6 texto-pagamento linha-pagamento">
-                            <p>TAXAS</p>
-                            <p><b>R$100,00</b></p>
+                            <p class="valores-pagamento">TAXAS</p>
+                            <p class="valores-pagamento"><b>R$100,00</b></p>
                         </div>
                     </div>
                     <div class="row col-11 m-3 p-2 justify-content-center">
                         <div class="col-12 texto-pagamento total-pagamento">
-                            <p>TOTAL</p>
-                            <p><b>R$1.392,00</b></p>
+                            <p class="valores-pagamento">TOTAL</p>
+                            <p class="valores-pagamento"><b>R$1.482,00</b></p>
                         </div>
                     </div>
                 </div>
@@ -60,39 +62,40 @@
                     <div class="row col-12 mx-0 p-2 div-pagamento">
                         <input  class="col-1  formas-pagamento" type="radio" name="forma-pagamento" value="cartao-credito">
                         <div class="col-2"><img src="./componentes/icones/icon-cartao-credito.png" class="imagem-pagamento"></div>
-                        <div class="col-9  formas-pagamento">CARTÃO DE CRÉDITO</div>
+                        <div class="col-9 d-flex formas-pagamento">CARTÃO DE CRÉDITO</div>
                     </div>
                     <div class="row col-12 mx-0 p-2 div-pagamento">
                         <input  class="col-1  formas-pagamento" type="radio" name="forma-pagamento" value="pix">
                         <div class="col-2 formas-pagamento"><img src="./componentes/icones/icon-pix2.png" class="imagem-pagamento"></div>
-                        <div class="col-9 formas-pagamento">PIX</div>
+                        <div class="col-9 d-flex formas-pagamento">PIX</div>
                     </div>
                     <div class="row col-12 mx-0 p-2">
                         <input  class="col-1  formas-pagamento" type="radio" name="forma-pagamento" value="boleto">
                         <div class="col-2 formas-pagamento"><img src="./componentes/icones/icone-codigo-de-barras2.png" class="imagem-pagamento"></div>
-                        <div class="col-9 formas-pagamento">BOLETO</div>
+                        <div class="col-9 d-flex formas-pagamento">BOLETO</div>
                     </div>
                 </div>
             </div>
             <!-- fim formas de pagamento -->
             <!-- inicio finalização compra -->
             <div class="col-12 col-md-12 col-lg-4 d-flex justify-content-center m-0  my-4 p-0">
-                <div class="col-11 container-pagamento">
-                    <div class="row col-12 mx-0 p-2 div-pagamento">
+                <div class="col-11 flex-column align-items-around container-pagamento">
+                    <div class="row col-12 mx-0 p-2 h-20 div-pagamento">
                         <div class="col-2"><img class="formas-pagamento"src="componentes/icones/icon-cupom.png" width=50px height=40px></div>
-                        <div class="col-10">ADICIONAR UM CUPOM DE DESCONTO</div>
+                        <div class="col-10 d-flex formas-pagamento">ADICIONAR UM CUPOM DE DESCONTO</div>
                         <div class="row col-12 mx-0 my-3 justify-content-around">
                             <input class="col-7" type="text" id="cupom" value="" placeholder="Insira o código">
-                            <button type="submit" class="col-4">Salvar</button>
+                            <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-cupom col-4">SALVAR</button>
                         </div>
                     </div>
-                    <div class="row col-12 mx-0 my-2 p-2 div-pagamento">
+                    <div class="row col-12 mx-0 my-2 p-2 h-60 div-pagamento">
                         <div class="texto-pagamento my-2">TERMO DE ALGO</div>
-                        <p class="texto-pagamento my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque risus, at dapibus diam. Cras vel varius odio. Integer eu lectus nisi. In hac habitasse platea dictumst. Fusce at ligula in neque dictum auctor sed quis nisi. Integer quis interdum ligula, at tincidunt neque. Proin consequat lobortis odio vitae facilisis.</p>
+                        <div class="texto-pagamento my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id scelerisque risus, at dapibus diam. Cras vel varius odio. Integer eu lectus nisi. In hac habitasse platea dictumst. Fusce at ligula in neque dictum auctor sed quis nisi. Integer quis interdum ligula, at tincidunt neque. Proin consequat lobortis odio vitae facilisis.</div>
                         <input  class="col-1 formas-pagamento radio-pagamento" type="radio" name="aceite-termo" value="aceite-termo">
-                        <p class="col-11">EU ACEITO OS TERMOS E CONDIÇÕES</p>
+                        <div class="col-11">EU ACEITO OS TERMOS E CONDIÇÕES</div>
                     </div>
                     <div class="row col-12 mx-0 p-2">
+                        <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp col-12">FINALIZAR COMPRA</button>
                     </div>
                 </div>
             </div>
