Finalização do carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -29,34 +29,29 @@
       <div class="pb-5">
         <div class="container">
           <div class="row mx-0">
-            <div class="col-lg-12 p-2 mb-5">
+            <div class="p-2 mb-5 row container-carrinho">
               <!-- Início da lateral do carrinho -->
-              <div class="cupom-banner-carrinho px-5 py-3 col-4 ">
-                <!-- Início card de cupom de desconto do carrinho  -->
-                <div class="cupom-desconto col-12">
-                  <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h3 class="card-title">Card title</h3>
-                      <h4 class="card-subtitle mb-2 text-muted">Card subtitle</h4>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <!-- Button de segunda importância  -->
-                      <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Aplicar cupom</button>
-
-                    </div>
+              <div class="cupom-banner-carrinho py-3 col-lg-12 col-xl-4 ">
+                <!-- Início card de carteira virtual do carrinho  -->
+                <div class="card carteira-virtual">
+                  <div class="card-body">
+                    <h3 class="card-title">Carteira virtual</h3>
+                    <p class="card-text">Você não possui saldo creditado na sua conta. Solicite um novo depósito pelo botão abaixo.</p>
+                    <!-- Button de segunda importância  -->
+                    <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Adicionar saldo</button>
                   </div>
                 </div>
-                <!-- Fim card de cupom de desconto do carrinho  -->
+                <!-- Fim card de carteira virtual do carrinho  -->
                 <!-- Início banner lateral do carrinho  -->
-                <div class="cupom-desconto col-12">
-                  
+                <div class="banner-carrinho row">
                 </div>
                 <!-- Fim banner lateral do carrinho  -->
               </div>
               <!-- Fim da lateral do carrinho -->
               
               <!-- Início da listagem de produtos no carrinho -->
-              <div class="table-responsive carrinho px-5 py-3 col-8">
-                <table class="table container-itens">
+              <div class="table-responsive carrinho py-3 mx-0 col-11 col-sm-11 col-md-10 col-lg-10 col-xl-8">
+                <table class="table container-itens col-md-12 col-lg-12">
                   <thead>
                     <tr>
                       <th scope="col" class="border-0">
@@ -82,14 +77,14 @@
                       </div>
                     </th>
                     <td class="col-5">
-                      <div class="ml-3 d-inline-block align-middle">
-                        <span class="text-muted font-italic d-block">Categoria: luvas</span>
+                      <div class="ml-3 d-inline-block align-middle container-descricao-item">
+                        <span class="text-muted font-italic">Categoria: luvas</span>
                         <h3 class="mb-0"> <a href="#" class="d-inline-block align-middle">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</a></h3>
-                        <span class="text-muted font-italic d-block">Raridade: Secreto</span>
+                        <span class="text-muted font-italic">Raridade: Secreto</span>
                       </div>
                     </td>
                     <td class="border-0 align-middle col-2 preco">R$79,00</td>
-                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-menu.png" alt=""></i></a></td>
+                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-lixeira.png" alt=""></i></a></td>
                   </tr>
 
                   <!-- =====================SEGUNDO PRODUTO===================== -->
@@ -101,13 +96,13 @@
                     </th>
                     <td class="col-5">
                       <div class="ml-3 d-inline-block align-middle">
-                        <span class="text-muted font-italic d-block">Categoria: luvas</span>
+                        <span class="text-muted font-italic ">Categoria: luvas</span>
                         <h3 class="mb-0"> <a href="#" class="d-inline-block align-middle">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</a></h3>
-                        <span class="text-muted font-italic d-block">Raridade: Secreto</span>
+                        <span class="text-muted font-italic ">Raridade: Secreto</span>
                       </div>
                     </td>
                     <td class="border-0 align-middle col-2 preco">R$79,00</td>
-                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-menu.png" alt=""></i></a></td>
+                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-lixeira.png" alt=""></i></a></td>
                   </tr>
 
                   <!-- =====================TERCEIRO PRODUTO===================== -->
@@ -119,13 +114,13 @@
                     </th>
                     <td class="col-5">
                       <div class="ml-3 d-inline-block align-middle">
-                        <span class="text-muted font-italic d-block">Categoria: luvas</span>
+                        <span class="text-muted font-italic">Categoria: luvas</span>
                         <h3 class="mb-0"> <a href="#" class="d-inline-block align-middle">LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</a></h3>
-                        <span class="text-muted font-italic d-block">Raridade: Secreto</span>
+                        <span class="text-muted font-italic">Raridade: Secreto</span>
                       </div>
                     </td>
                     <td class="border-0 align-middle col-2 preco">R$79,00</td>
-                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-menu.png" alt=""></i></a></td>
+                    <td class="border-0 align-middle col-2 trash-item "><a href="#"><i class="fa fa-trash"><img src="/componentes/icones/icon-lixeira.png" alt=""></i></a></td>
                   </tr>
 
                 </table>
@@ -138,14 +133,14 @@
                       <p class="m-0">Cupom de desconto</p>
                     </div>
 
-                    <div class="input-cupom row"> 
+                    <div class="input-cupom row px-2"> 
                       <div class="col-8">
                         <input type="text" class="form-control caixas-de-insercao login" aria-describedby="cupom" placeholder="Digite seu cupom">
                       </div>
 
                       <div class="col-4">
                         <!-- Button de segunda importância  -->
-                        <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp">Aplicar</button>
+                        <button type="button" class="btn btn-outline-secondary btn-mvp btn-secundario-mvp ml-2">Aplicar</button>
                       </div>
                     </div>
 
