--- a/pagamento.html
+++ b/pagamento.html
@@ -9,9 +9,12 @@
     <link href="./css/footer.css" rel="stylesheet">
     <link href="./componentes/botoes/botoes.css" rel="stylesheet">
     <link href="./css/pagamento.css" rel="stylesheet">
+    <link rel='stylesheet' href="./componentes/modal-login/login.css">
+    <link rel='stylesheet' href="./Home/css/home.css">
     <title>Document</title>
 </head>
 <body>
+    
     <!-- inicio pagamento -->
     <h1 class="h1-pagamento mt-4 mb-0">PAGAMENTO</h1>
     <section class="container d-flex mw-100 my-3 p-0">
@@ -109,9 +112,9 @@
                     <div class="row col-12 mx-0 p-2 h-20 div-pagamento">
                         <div class="col-2"><img class="formas-pagamento"src="./images/icones/icon-cupom.png" width=50px height=40px></div>
                         <div class="col-10 d-flex formas-pagamento">ADICIONAR UM CUPOM DE DESCONTO</div>
-                        <div class="row col-12 mx-0 my-3 justify-content-around">
+                        <div class="row col-12 mx-0 my-3 p-0 justify-content-around">
                             <input class="col-7" type="text" id="cupom" value="" placeholder="Insira o código">
-                            <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-cupom col-4">SALVAR</button>
+                            <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-cupom text-center col-5">SALVAR</button>
                         </div>
                     </div>
                     <div class="row col-12 mx-0 my-2 p-2 h-60 div-pagamento">
