inclusao de titulo

--- a/dashboardcliente.html
+++ b/dashboardcliente.html
@@ -10,7 +10,7 @@
     <link href="./css/footer.css" rel="stylesheet">
     <link href="./componentes/botoes/botoes.css" rel="stylesheet">
     <link href="./css/dashboardcliente.css" rel="stylesheet">
-    <title>Document</title>
+    <title>MVP Skins</title>
 </head>
 
 <body>
