--- a/pagamento.html
+++ b/pagamento.html
@@ -11,10 +11,10 @@
     <link href="./css/pagamento.css" rel="stylesheet">
     <link rel='stylesheet' href="./componentes/modal-login/login.css">
     <link rel='stylesheet' href="./Home/css/home.css">
-    <title>Document</title>
+    <title>MVP Skins</title>
 </head>
 <body>
-    
+
     <!-- inicio pagamento -->
     <h1 class="h1-pagamento mt-4 mb-0">PAGAMENTO</h1>
     <section class="container d-flex mw-100 my-3 p-0">
