alteracoes na home

--- a/Home/home.html
+++ b/Home/home.html
@@ -41,7 +41,7 @@
             </div  >
             <div class = " carousel-inner banner " >
               <div class = " carrossel-item ativo " >
-                <img src = "./images/CSGO.jpg" class = "d-block w-100 " alt = " ... " >
+                <img src = "./images/csgowallpaper_952490122386_1568752841_895025878978.jpg" class = "d-block w-100 " alt = " ... " >
                 <div class = " carousel-caption d-none d-md-block " >
                     <h5> Comece a jogar agora </h5>
                     <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, nisi illo fuga excepturi veritatis repellat animi pariatur dolorem perspiciatis consequuntur iusto exercitationem voluptas explicabo incidunt similique suscipit rerum quisquam asperiores? </ p  >
@@ -123,18 +123,4 @@
     <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integridade = "sha384- / bQdsTh / da6pkI1MST / rWKFNjaCP5gBSY4sEBT38Q / 9RBh9AH40zEOg7Hlq2THRZ "
         crossorigin = "anonymous"> </script>
-</body>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
