finalização da pagina de cadastro

--- a/home.html
+++ b/home.html
@@ -210,7 +210,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link link-header" href="#">Carrinho
+          <a class="nav-link link-header" href="/carrinho.html">Carrinho
             <img src="/images/icones/icon-carrinho.png" width="30" height="30">
           </a>
         </li>
