ajuste na tela pagamentos

--- a/pagamento.html
+++ b/pagamento.html
@@ -227,26 +227,26 @@
                 <div class="col-11 container-pagamento">
                     <div class="col-12 div-pagamento">
                         <div class="row col-11 m-3 p-2 produto-pagamento">
-                            <div class="col-5"><img class="imagem-resumo" src="./images/produtos/adaga-marcara-urbana.png" alt=""></div>
+                            <div class="col-5"><img class="imagem-resumo" src="./images/PRODUTOS/produto-carrousel-1.png" alt=""></div>
                             <div class="col-7">
-                                <div>ADAGA SOMBRIA | AÇO DE DAMASCO</div>
+                                <div>LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
                                 <div class="quantidade-pagamento">QUANTIDADE: 1</div>
-                                <div><b>R$473,00</b></div>
+                                <div><b>R$ 691,00</b></div>
                             </div>
                         </div>
                         <div class="row col-11 m-3 p-2 produto-pagamento">
-                            <div class="col-5"><img class="imagem-resumo" src="./images/produtos/luva-abate.png" alt=""></div>
+                            <div class="col-5"><img class="imagem-resumo" src="./images/PRODUTOS/produto-carrousel-1.png" alt=""></div>
                             <div class="col-7">
-                                <div>LUVA ESPORTIVA | ABATE</div>
+                                <div>LUVAS ESPORTIVAS | BATRÁQUIO BRONZEADO</div>
                                 <div class="quantidade-pagamento">QUANTIDADE: 1</div>
-                                <div><b>R$2.949,00</b></div>
+                                <div><b>R$ 691,00</b></div>
                             </div>
                         </div>
                     </div>
                     <div class="row col-12 my-3 mx-0 p-2 justify-content-between">
                         <div class="col-6 texto-pagamento">
                             <p class="valores-pagamento">PAGAMENTO</p>
-                            <p class="valores-pagamento"><b>R$3.422,00</b></p>
+                            <p class="valores-pagamento"><b>R$1.382,00</b></p>
                         </div>
                         <div class="col-6 texto-pagamento linha-pagamento">
                             <p class="valores-pagamento">TAXAS</p>
@@ -256,7 +256,7 @@
                     <div class="row col-11 m-3 p-2 justify-content-center">
                         <div class="col-12 texto-pagamento total-pagamento">
                             <p class="valores-pagamento">TOTAL</p>
-                            <p class="valores-pagamento"><b>R$3.522,00</b></p>
+                            <p class="valores-pagamento"><b>R$1.482,00</b></p>
                         </div>
                     </div>
                 </div>
@@ -315,9 +315,9 @@
                     <div class="row col-12 mx-0 p-2 h-20 div-pagamento">
                         <div class="col-2"><img class="formas-pagamento"src="./images/icones/icon-cupom.png" width=50px height=40px></div>
                         <div class="col-10 d-flex formas-pagamento">ADICIONAR UM CUPOM DE DESCONTO</div>
-                        <div class="row col-12 mx-0 my-3 p-0 justify-content-around">
+                        <div class="row col-12 mx-0 my-3 justify-content-around">
                             <input class="col-7" type="text" id="cupom" value="" placeholder="Insira o código">
-                            <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-cupom text-center col-5">SALVAR</button>
+                            <button type="button" class="btn btn-primary btn-mvp btn-primario-mvp btn-cupom col-4">SALVAR</button>
                         </div>
                     </div>
                     <div class="row col-12 mx-0 my-2 p-2 h-60 div-pagamento">
